traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:22: error: ')' expected but '=>' found.
    case (largeur,hauteur => ecritMessage(cpt)
                          ^