traversal.column.traversalbycolumn.TraversalByColumn.scala.code
def getMondeHauteur() {
  val a : Int = getY()
  var nb : Int = 0
  while (!(getDirection()=Direction.NORTH)){gauche()}
  do {avance(); nb= nb + 1} while (a!=getY())
  return(nb)
}

def getMondeLargeur() {
  val a=getX()
  var nb : Int = 0
  while (!(getDirection()=Direction.EAST)){gauche()}
  do {avance(); nb= nb + 1} while (a!=getX())
  return(nb)
}


override def run() {
  val largeur : Int = getMondeLargeur()
  val hauteur : Int = getMondeHauteur()
  var cpt : Int = 0 
  (getX(),getY()) match {
    case (largeur,hauteur => ecritMessage(cpt)
    case (_,hauteur()) => ecritMessage(cpt); cpt= cpt + 1; setPos(getX()+1,0)
    case (_,_)=> ecritMessage(cpt); cpt=cpt+1; setPos(getX(),getY()+1)
  }
}